feat: update design

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       name: 'Not Interested - Generic Templates Responses for Annoying Recruiters',
       repo: 'sinedied/not-interested',
       loadNavbar: true,
+      loadSidebar: false
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
