--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Generic templates responses for annoying generic templates messages from recruiters">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Not Interested - Generic Templates Responses for Annoying Recruiters</title>
-  <link rel="stylesheet" href="//unpkg.com/docsify-themeable/dist/css/theme-simple.css">
+  <link rel="stylesheet" href="//unpkg.com/docsify/themes/dark.css">
 </head>
 <body>
   <noscript>This page requires JavaScript to work, please enable it or just read it on <a href="https://github.com/sinedied/not-interested">Here</a>.</noscript>
@@ -16,10 +16,9 @@
       name: 'Not Interested - Generic Templates Responses for Annoying Recruiters',
       repo: 'sinedied/not-interested',
       loadNavbar: true,
-      hideSidebar: true,
+      hideSidebar: true
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <script src="//unpkg.com/docsify-themeable"></script>
 </body>
 </html>
